--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">= 5.3",
+        "symfony/symfony": ">= 2.1.0"
     },
     "autoload": {
         "psr-0": {
